# django-project-test

./: .gitignore  pyproject.toml
R4C/R4C/: settings.py  urls.py
R4C/customers/: forms.py  models.py  urls.py  views.py
R4C/customers/migrations/: 0001_initial.py  0002_alter_customer_id.py
R4C/customers/templates/customers/: add_customer.html
R4C/excel_files/: report_2024-12-18.xlsx
R4C/orders/: forms.py  models.py  urls.py  views.py
R4C/orders/migrations/: 0001_initial.py  0002_alter_order_id.py
R4C/orders/templates/orders/: error_buy.html  order_add.html  success_buy.html
R4C/robots/: apps.py  context_processors.py  forms.py  helpers.py  signals.py  urls.py  utils.py  views.py
R4C/robots/migrations/: 0001_initial.py  0002_alter_robot_id.py
R4C/robots/templates/robots/: main.html  robot_add.html  robot_list.html
R4C/static/css/: styles.css
R4C/templates/: base.html
