[tool.poetry]
name = "django-project-test"
version = "0.1.0"
description = ""
authors = ["topgun <reddevil.23031991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
black = "^24.10.0"
isort = "^5.13.2"
openpyxl = "^3.1.5"
pytz = "^2024.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
